[package]
name = "wgpu-27"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wgpu = "27.0.1"
